package Bil211Game2.Game.Entity;

public interface Acidity {
    public void splash();
}
