package Bil211Game2.Game.Entity;

public interface Jumpable {
    public void jump();
}
