package Bil211Game2.Game.Entity;

import Bil211Game2.Game.Main.GamePanel;

public abstract class Zombie extends Monster{

    public Zombie(GamePanel gp) {
        super(gp);
    }
    
}
